--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID=INCONNU~XD~rs5wXSaA#gmgrip65FN_1QNGOkUe06vVB-8-3YTt4XLejDiQWjRQ
 PREFIX=.
 OWNER_NUMBER=554488138425
 SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NAME=Derrickopepero
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
